# ledger-app-iotex

./: .gitignore  LICENSE  Makefile  README.md  demo.py  nanopb-0.4.5-ledger.patch  review.md  script.ld
.github/workflows/: main.yml
docs/: APDUSPEC.md  TXSPEC.md
fuzzing/: CMakeLists.txt  README.md  coverage.sh  fuzz_iotex.c  run.sh
fuzzing/corpus/: candidate_register.raw  candidate_update.raw  exe.raw  stake_add_deposit.raw  stake_change_candidate.raw  stake_create.raw  stake_restake.raw  stake_transfer_ownership.raw  stake_unstake.raw  stake_withdraw.raw  tx1.raw  tx2.raw  tx3.raw
proto/: action.options  action.pb.c  action.pb.h
releases/: app.hex  notes.md
src/: app_main.c  app_main.h  crypto.c  crypto.h  main.c  pb_parser.h  settings.h  view.c  view.h  view_common.c  view_common.h  view_expl.c  view_expl.h
src/lib/: biginteger.c  biginteger.h  pb_parser.c  pb_parser.h  tokens.c  tokens.h  transaction.c  transaction.h  tx_display.c  tx_display.h  tx_parser.c  tx_parser.h
